Mongoid tests corrections

--- a/test/dummy/config/mongoid.yml
+++ b/test/dummy/config/mongoid.yml
@@ -1,13 +1,13 @@
 development:
   sessions:
     default:
-      database: mongoid_dev
+      database: merit_dev
       hosts:
         - localhost:27017
 
 test:
   sessions:
     default:
-      database: mongoid_test
+      database: merit_test
       hosts:
         - localhost:27017
