Testing against Rails 4.1/4.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ env:
   - RAILS_VERSION=3.2
   - RAILS_VERSION=4.0
   - RAILS_VERSION=4.0-protected-attributes
+  - RAILS_VERSION=4.1
   - ORM=active_record
+allow_failures:
+  - RAILS_VERSION=4.2
   - ORM=mongoid
 services:
   - mongodb
