--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
-  - jruby-19mode
-  - rbx-2
+  # Erroring out: https://travis-ci.org/tute/merit/builds/40478845
+  # - jruby-19mode
+  # - rbx-2
 env:
   - RAILS_VERSION=3.2
   - RAILS_VERSION=4.0
