Test with Ruby 3 and Rails 6.1
Excludes Rails 5.2 with Ruby 3, fails with:

/home/travis/build/merit-gem/merit/vendor/bundle/ruby/3.0.0/gems/actionpack-5.2.4.4/lib/action_dispatch/middleware/static.rb:111:in
`initialize': wrong number of arguments (given 3, expected 2) (ArgumentError)

See https://travis-ci.org/github/merit-gem/merit/jobs/752017368

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,14 @@ rvm:
   - 2.5
   - 2.6
   - 2.7
+  - 3.0
 
 env:
   - RAILS_VERSION=5.2
   - RAILS_VERSION=6.0
+  - RAILS_VERSION=6.1
+
+matrix:
+  exclude:
+    - env: RAILS_VERSION=5.2
+      rvm: 3.0
